fixed images not showing up

--- a/css/box1.css
+++ b/css/box1.css
@@ -9,7 +9,7 @@
     padding: 10px;
     width: 50%;
     min-height: 30%;
-    background: url(./images/familia.jpeg) center ;
+    background: url(../images/familia.jpeg) center ;
 }
 .myname{
     margin:10px;
